src/website/app.scss
body {
    font-family: Inter, sans-serif;
    margin: 0;
}
.tatva_container {
    background-color: #FFFFFF;
    width: 100%; 
}

.tatva-hero-Section {
    background-image: url(banner.png);
    background-repeat: no-repeat;
    background-size: cover;
    padding: 5vw 0 6vw;
    border-radius: 0% !important;
    transform: scaleX(-1);
}

.tatva-hero-Section .tatva-hero-cont {
    transform: scaleX(-1);
}

.tatva-hero-cont {
    margin: auto 0 auto 620px;
    width: 50%; 
}
.tatva-com-page,
.tatva-lcont {
    margin: 0 auto;
    max-width: 1200px;
    padding: 40px 20px;
}

div.tatva-column {
    border-radius: 10px;
    box-shadow: none !important;
    height: auto;
}

.copied-pop .components-popover__content {
    padding: 6px !important
}

.tatva-back-button span,
.tatva-back-button button {
    color: #535353;
    font-size: .875rem;
    font-weight: 500;
}

.tatva-back-button .home:hover,
.components-button:hover:not(:disabled,[aria-disabled=true]) {
    color: crimson;
}

.tatva-hero-cta {
    .components-button {
        color: white !important;
    }
}

/* Getting Started */
pre {
    background-color: #f0f0f0;
    padding: 20px;
    border: 0.5px solid #cacaca;
    border-radius: 4px;
}

.getting_started {
    max-width: 1200px;
    padding: 20px;
    margin: auto;
}

@media only screen and (max-width:820px) {
    .tatva-com-page,
    .tatva-lcont,
    .getting_started {
        max-width: 100% !important;

    }

    pre {
        overflow: scroll;
    }

    .tatva-footer .components-card__body .footer-content,
    div.tatva-hero-cont {
        width: 100% !important
    }

    .tatva-variation-card {
        padding: 35px 20px;
    }
}

